# car-physics-pacejka

./: .gitattributes  .gitignore  CMakeLists.txt  CarSimulation.cpp  CarSimulation.h  LICENSE  README.md  demo.cpp
car_sim_gen/: car_model.py  constants.py  demo.py  generate_car_sim.py  generate_cpp_utils.py  plot_fxy_varying_fz.py  plot_fy_by_speed.py  plot_fy_of_alpha.py  plot_fy_varying_fz.py  plot_fy_varying_vr.py  plot_motor_model.py  plot_tire_model.py  plot_varying_C_E.py  quantities.py  simple_demo.py
car_sim_gen/demo/: demo.py  plot_fxy_varying_fz.py  plot_fy_by_speed.py  plot_fy_of_alpha.py  plot_fy_varying_fz.py  plot_fy_varying_vr.py  plot_motor_model.py  plot_tire_model.py  plot_varying_C_E.py
cmake/: add_generated_library.cmake  download_matplotlib.cmake
